<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">assignement1.2</string>
    <string name="button_settings">Settings</string>
    <string name="event_a">EVENT A</string>
    <string name="event_b">EVENT B</string>
    <string name="event_c">EVENT C</string>
    <string name="total_count">Total count:</string>
    <string name="show_count">SHOW MY COUNT</string>
    <string name="settings_activity_bar">Settings Activity</string>
    <string name="data_activity_bar">Data Activity</string>
    <string name="data_semicolon">": "</string>
    <string name="edit_settings">Edit settings</string>
    <string name="toggle_event_names">Toggle Event names</string>
    <string name="counter_name_hint">Name goes here</string>
    <string name="Event_A_sharedPreference">EventASharedPreference</string>
    <string name="Event_B_sharedPreference">EventBSharedPreference</string>
    <string name="Event_C_sharedPreference">EventCSharedPreference</string>
    <string name="Max_Count_sharedPreference">MaxCountSharedPreference</string>
    <string name="Event_A_name_key">EventA_key</string>
    <string name="Event_B_name_key">EventB_key</string>
    <string name="Event_C_name_key">EventC_key</string>
    <string name="Max_Count_key">MaxCount_key</string>
    <string name="save">save</string>

</resources>