<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-3dp" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/button_settings"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_event_a"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/event_a"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_settings" />

    <Button
        android:id="@+id/button_event_b"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/event_b"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_event_a" />

    <Button
        android:id="@+id/button_event_c"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/event_c"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_event_b" />

    <TextView
        android:id="@+id/text_count"
        android:layout_width="182dp"
        android:layout_height="28dp"
        android:layout_marginTop="50dp"
        android:text="@string/total_count"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/show_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_event_c" />

    <Button
        android:id="@+id/show_count"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/show_count"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_count" />
</androidx.constraintlayout.widget.ConstraintLayout>